# esp32-ws-car

./: .gitignore  LICENSE  Makefile  README.md
firmware/: .clang-format  CMakeLists.txt  Makefile  OPCODES.md  README.md  sdkconfig  sdkconfig.ci  sdkconfig.defaults  sdkconfig.old
firmware/main/: CMakeLists.txt  command.c  command.h  example_motor.c  example_motor.h  main.c  motor.c  motor.h  ultrasound.c  ultrasound.h  webserver.c  webserver.h  wifi.c  wifi.h  wifi_cred.h
main/: main.c
oxenode/esp32-ws-car/: .oxerc  README.md  package-lock.json  package.json
oxenode/esp32-ws-car/src/: distance_sensor.tsx  motor.tsx  motor_left_right.tsx  pinMode.tsx  writePin.tsx
oxenode/ws-esp32/: .oxerc  package.json
oxenode/ws-esp32/src/: distance_sensor.tsx  led.tsx  motor.tsx  motor_left_right.tsx
